kubernetes/apps/audiobookshelf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: apps
spec:
  selector:
    app: audiobookshelf
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
