kubernetes/apps/audiobookshelf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: audiobookshelf.taptappers.club
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 80
  tls:
  - hosts:
    - audiobookshelf.taptappers.club
    secretName: audiobookshelf-tls-secret
